<?xml version="1.0"?>
<package format="3">
  <name>skyvolt_fleet</name>
  <version>0.1.0</version>
  <description>Multi-robot scheduler with track-segment reservations + REST API.</description>
  <maintainer email="re@skyvolt.example">Skyvolt RE</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>skyvolt_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
