<?xml version="1.0"?>
<package format="3">
  <name>skyvolt_msgs</name>
  <version>0.1.0</version>
  <description>Custom messages, services, and actions for SkyvoltRobot.</description>
  <maintainer email="re@skyvolt.example">Skyvolt RE</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
