<?xml version="1.0"?>
<package format="3">
  <name>skyvolt_safety</name>
  <version>0.1.0</version>
  <description>Operations & safety monitors: rail load/tilt, e-stop chain (Phase 4).</description>
  <maintainer email="re@skyvolt.example">Skyvolt RE</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
