<?xml version="1.0"?>
<package format="3">
  <name>skyvolt_vision</name>
  <version>0.1.0</version>
  <description>Charging-port 6-DoF pose estimation from RGB-D feature points (Phase 3).</description>
  <maintainer email="re@skyvolt.example">Skyvolt RE</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
