<?xml version="1.0"?>
<package format="3">
  <name>skyvolt_description</name>
  <version>0.1.0</version>
  <description>URDF/xacro for the SkyvoltRobot, track, and box-type charging pile.</description>
  <maintainer email="re@skyvolt.example">Skyvolt RE</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
