<?xml version="1.0"?>
<package format="3">
  <name>skyvolt_eval</name>
  <version>0.1.0</version>
  <description>Regression evaluation harness for SkyvoltRobot algorithms.</description>
  <maintainer email="re@skyvolt.example">Skyvolt RE</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
